# macro-logbot

./: .env.example  .gitignore  .macro-logbot-sessions.db  .mergify.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: pre-bash-gate.sh
.claude/skills/: safe-merge.md  safe-push.md
.claude/skills/fix-review/: SKILL.md  brief-template.md
.claude/skills/post-review/: SKILL.md  post.sh  post_helper.py
.claude/skills/post-review/templates/: _finding_template.md  architect.md  code-reviewer.md  security-reviewer.md  test-engineer.md
.claude/skills/safe-merge/: check.sh
.claude/skills/safe-push/: SKILL.md  check-ci.sh  run.sh
.claude/skills/verify-fix/: SKILL.md  verifier-template.md
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: deps.yml  lint.yml  pr-review.yml  sast.yml  secrets.yml  test.yml  types.yml
docs/brainstorm/: 01-약한-LLM-강화-references.md  README.md
docs/design/: 02-설계문서.md  sso-plan.md
docs/operations/: DEPLOYMENT.md
docs/process/: 03-개발-프로세스.md  04-PoC-운영가이드.md  FOLLOWUP-TASKS.md
docs/requirements/: 01-요구사항명세서.md  01-요구사항확인서.md
docs/showcase/: 01-requirements-summary.md  01-requirements-summary.mmd  02-architecture-diagram.md  02-architecture-diagram.mmd  03-ai-dlc-flowchart.md  03-ai-dlc-flowchart.mmd  baseline-2026-05-20-N10.md  baseline-2026-05-20-N3-after-pr53.md  baseline-2026-05-20.md
poc/: README.md
poc/error_catalog/: E001.yaml  E002.yaml  E003.yaml  E004.yaml  E005.yaml  E006.yaml  E007.yaml  E008.yaml  E009.yaml  E010.yaml
poc/scripts/: claude_judge.py  evaluate.py  inject.py  run-onprem-baseline.sh  setup.sh  trigger.py
poc/scripts/demo/: demo_session.py
poc/scripts/eval/: claude_judge.py  evaluate.py  inject.py  run-onprem-baseline.sh  trigger.py
poc/scripts/ops/: deploy.sh  setup-enforcement.sh  setup.sh
poc/targets/snake-game/: LICENSE  README.md
poc/targets/snake-game/original/: snake.py
scripts/: demo_session.py  deploy.sh  setup-enforcement.sh
src/macro_logbot/: __init__.py  app.py  auth.py
src/macro_logbot/agent/: __init__.py  core.py
src/macro_logbot/gateway/: __init__.py  client.py  models.py
src/macro_logbot/intake/: __init__.py  parser.py
src/macro_logbot/kb/: __init__.py
src/macro_logbot/knowledge_base/: __init__.py  store.py
src/macro_logbot/session/: __init__.py  store.py
src/macro_logbot/tools/: __init__.py  builtin.py  registry.py
tests/: __init__.py  conftest.py  test_agent_context_truncate.py  test_agent_core.py  test_agent_nodes.py  test_agent_termination_guard.py  test_auth.py  test_claude_judge.py  test_crystallize_structured.py  test_demo_session.py  test_endpoint_agent_analyze.py  test_endpoint_chat_completions.py  test_endpoint_models.py  test_fallback_response_header.py  test_gateway.py  test_gateway_assistant_content_compat.py  test_gateway_fallback_metadata.py  test_gateway_fallback_parser.py  test_gateway_onprem_headers.py  test_gateway_reasoning_effort.py  test_health.py  test_intake_parser.py  test_knowledge_base.py  test_poc_catalog.py  test_poc_evaluate.py  test_poc_inject.py  test_poc_trigger.py  test_session_store.py  test_smoke.py  test_tool_workspace.py  test_tools_builtin.py  test_tools_registry.py
tests/shell/: test_check_ci_sha_guard.sh  test_enforce_gate.sh
tests/skills/: test_post_helper.py
