[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-logbot"
version = "0.0.1"
description = "사내 에이전트 AI 플랫폼 — MACRO 에러 로그 자율 분석"
license = { text = "MIT" }
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    # Python 3.14 호환 한계로 1.83.7 이 가용 최신 (1.83.8+ 는 Requires-Python <3.14).
    # 1.83.7 은 malware (1.82.9 fix), OIDC bypass (1.83.0), proxy SQLi/MCP RCE (1.83.7) 모두 패치됨.
    # guardrails sandbox escape (1.83.10 fix) 는 본 PoC 가 guardrails 미사용이라 무영향.
    # LiteLLM 3.14 지원 복구 시 1.83.10+ 으로 상향 — FOLLOWUP task-SEC-001.
    "litellm>=1.83.7,<2.0",
    # python-dotenv 는 litellm 의 transitive — 직접 pin 시 litellm 1.83.7 과 dependency
    # resolution 충돌 (litellm 이 더 좁은 범위 요구). CVE-2026-28684 (1.2.2 fix) 대응은
    # FOLLOWUP task-SEC-005 (litellm pin 상향과 함께 진행).
    # LangGraph — Agent Core state graph (spec §5.2 / task-MVP-001). 1.2.0 시점
    # cp314 휠 가용 확인됨. py.typed 패키지라 mypy strict clean.
    "langgraph>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",  # FastAPI TestClient 의존
    # PoC infra — poc/scripts + poc/targets/snake-game 만 의존. 런타임 backend 미사용.
    # pygame (mainline) 은 Python 3.14 휠 미제공 → sdl2-config 빌드 필요.
    # pygame-ce (community edition) 는 cp314 manylinux 휠 제공 + `import pygame`
    # drop-in 호환. spec §10.4 의 "pygame Snake" 요구는 그대로 충족.
    "pygame-ce>=2.5",
    "pyyaml>=6.0",
    "types-PyYAML>=6.0",  # mypy strict 모드 stub.
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "SIM"]
ignore = []

[tool.mypy]
strict = true
python_version = "3.14"
files = ["src/"]
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
