[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-logbot"
version = "0.0.1"
description = "사내 에이전트 AI 플랫폼 — MACRO 에러 로그 자율 분석"
license = { text = "MIT" }
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    # Python 3.14 호환 한계로 1.83.7 이 가용 최신 (1.83.8+ 는 Requires-Python <3.14).
    # 1.83.7 은 malware (1.82.9 fix), OIDC bypass (1.83.0), proxy SQLi/MCP RCE (1.83.7) 모두 패치됨.
    # 본 PR 시점 fix 불가 vuln (deps.yml 의 IGNORE_VULNS 명시):
    #   CVE-2026-40217 (litellm 1.83.10 fix) — 1.83.10+ Python 3.14 미지원.
    #   CVE-2026-28684 (python-dotenv 1.2.2 fix) — litellm 1.83.7 transitive 가 1.2 미만 요구.
    # 둘 다 LiteLLM 3.14 지원 복구 후 동시 fix → FOLLOWUP task-SEC-001 / task-SEC-005.
    "litellm>=1.83.7,<2.0",
    # LangGraph — Agent Core state graph (spec §5.2 / task-MVP-001). 1.2.0 시점
    # cp314 휠 가용 확인됨. py.typed 패키지라 mypy strict clean.
    "langgraph>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",  # FastAPI TestClient 의존
    # PoC infra — poc/scripts + poc/targets/snake-game 만 의존. 런타임 backend 미사용.
    # pygame (mainline) 은 Python 3.14 휠 미제공 → sdl2-config 빌드 필요.
    # pygame-ce (community edition) 는 cp314 manylinux 휠 제공 + `import pygame`
    # drop-in 호환. spec §10.4 의 "pygame Snake" 요구는 그대로 충족.
    "pygame-ce>=2.5",
    "pyyaml>=6.0",
    "types-PyYAML>=6.0",  # mypy strict 모드 stub.
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# tests 의 nested with 는 mock + raises 분리 의도 (가독성 우선) — SIM117 면제.
# src/ 는 strict 유지 (production code 의 가독성/단순성 ratchet up).
"tests/*" = ["SIM117"]

[tool.mypy]
# mypy strict 는 production src/ 만 — tests/poc 는 ad-hoc 시나리오/측정
# 스크립트, strict 면제 정책 명시 (architect WARN-4 PR #27).
strict = true
python_version = "3.14"
files = ["src/"]
exclude = ["tests/", "poc/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["src"]
markers = [
    "poc: PoC infra (Docker + /tmp/poc-cases + catalog yaml) 의존. CI 에서 deselect.",
]
